@@ -1,4 +1,9 @@
 
+31/01/2011 Changes
+
+Binding method into dictionary of owning object.
+
+
 30/01/2011 Changes
 
 Adding call to bind method into dictionary of owning object.
